docs - updates for rpm install, upgrade, related edits and file delet… (#386)
* docs - updates for rpm install, upgrade, related edits and file deletions

* enhance reset description per comment from francisco

* init - clarify when extension files are copied

* some upgrade topic edits requested by david

* register is also run on the standby

* add preupgrade step to backup embedded pxf

* replace PXF_INSTALL_DIR with PXF_HOME

* call pxf directly

* add missing r

--- a/docs/book/master_middleman/source/subnavs/pxf-subnav.erb
+++ b/docs/book/master_middleman/source/subnavs/pxf-subnav.erb
@@ -44,7 +44,7 @@
               <li><a href="/pxf/WIP/cfghostport.html" format="markdown">Configuring the PXF Agent Host and Port (Optional)</a> </li>
             </ul>
           </li>
-          <li><a href="/pxf/WIP/upgrade_pxf_6x.html" format="markdown">Upgrading PXF</a></li>
+          <li><a href="/pxf/WIP/upgrade_pxf_rpm.html" format="markdown">Upgrading PXF</a></li>
           <li><a href="/pxf/WIP/cfginitstart_pxf.html" format="markdown">Starting, Stopping, and Restarting PXF</a></li>
           <li><a href="/pxf/WIP/using_pxf.html" format="markdown">Granting Users Access to PXF</a></li>
           <li><a href="/pxf/WIP/reg_jar_depend.html" format="markdown">Registering PXF JAR Dependencies</a></li>
@@ -79,7 +79,6 @@
       </li>
       <li><a href="/pxf/WIP/jdbc_pxf.html" format="markdown">Accessing an SQL Database with PXF (JDBC)</a></li>
       <li><a href="/pxf/WIP/troubleshooting_pxf.html" format="markdown">Troubleshooting PXF</a></li>
-      <li><a href="/pxf/WIP/migrate_5to6.html" format="markdown">Migrating PXF from Greenplum 5</a></li>
       <li class="has_submenu">
         <a href="/pxf/WIP/ref/pxf-ref.html" format="markdown">PXF Utility Reference</a>
         <ul>
