--- a/docs/content/hive_jdbc_cfg.html.md.erb
+++ b/docs/content/hive_jdbc_cfg.html.md.erb
@@ -183,9 +183,9 @@ Perform the following procedure to configure a PXF JDBC server for Hive:
 
 10. Save your changes and exit the editor.
 
-11. Use the `pxf cluster sync` command to copy the new server configuration to the Greenplum Database cluster. For example:
+11. Use the `pxf cluster sync` command to copy the new server configuration to the Greenplum Database cluster:
     
     ``` shell
-    gpadmin@gpmaster$ $GPHOME/pxf/bin/pxf cluster sync
+    gpadmin@gpmaster$ pxf cluster sync
     ```
 
