--- a/docs/content/instcfg_pxf.html.md.erb
+++ b/docs/content/instcfg_pxf.html.md.erb
@@ -8,7 +8,7 @@ PXF provides connectors to Hadoop, Hive, HBase, object stores, and external SQL 
 
 To configure PXF, you must:
 
-1. Install Java packages on each Greenplum Database segment host as described in [Installing Java for PXF](install_java.html).
+1. Install Java 8 or 11 on each Greenplum Database segment host as described in [Installing Java for PXF](install_java.html).
 
 2. [Initialize the PXF Service](init_pxf.html).
 
