--- a/docs/content/monitor_pxf.html.md.erb
+++ b/docs/content/monitor_pxf.html.md.erb
@@ -36,6 +36,6 @@ Perform the following procedure to request the PXF status of your Greenplum Data
 2. Run the `pxf cluster status` command:
 
     ```shell
-    gpadmin@gpmaster$ $GPHOME/pxf/bin/pxf cluster status
+    gpadmin@gpmaster$ pxf cluster status
     ```
 
