--- a/docs/content/objstore_cfg.html.md.erb
+++ b/docs/content/objstore_cfg.html.md.erb
@@ -94,9 +94,9 @@ In this procedure, you name and add a PXF server configuration in the `$PXF_CONF
     ```
 5. Save your changes and exit the editor.
 
-4. Use the `pxf cluster sync` command to copy the new server configurations to the Greenplum Database cluster. For example:
+4. Use the `pxf cluster sync` command to copy the new server configurations to the Greenplum Database cluster:
     
     ``` shell
-    gpadmin@gpmaster$ $GPHOME/pxf/bin/pxf cluster sync
+    gpadmin@gpmaster$ pxf cluster sync
     ```
 
