--- a/docs/content/hbase_pxf.html.md.erb
+++ b/docs/content/hbase_pxf.html.md.erb
@@ -12,7 +12,7 @@ This section describes how to use the PXF HBase connector.
 
 Before working with HBase table data, ensure that you have:
 
-- Copied `$GPHOME/pxf/lib/pxf-hbase-*.jar` to each node in your HBase cluster, and that the location of this PXF JAR file is in the `$HBASE_CLASSPATH`. This configuration is required for the PXF HBase connector to support filter pushdown.
+- Copied `$PXF_HOME/lib/pxf-hbase-*.jar` to each node in your HBase cluster, and that the location of this PXF JAR file is in the `$HBASE_CLASSPATH`. This configuration is required for the PXF HBase connector to support filter pushdown.
 - Met the PXF Hadoop [Prerequisites](access_hdfs.html#hadoop_prereq).
 
 ## <a id="hbase_primer"></a>HBase Primer
