--- a/docs/content/init_pxf.html.md.erb
+++ b/docs/content/init_pxf.html.md.erb
@@ -21,7 +21,7 @@ specific language governing permissions and limitations
 under the License.
 -->
 
-The PXF server is a Java application. You must explicitly initialize the PXF Java service instance. This one-time initialization creates the PXF service web application and generates PXF configuration files and templates.
+The PXF server is a Java application. You must explicitly initialize the PXF Java service instance. This one-time initialization copies PXF extension files to the Greenplum Database installation, creates the PXF service web application, and generates PXF configuration files and templates.
 
 PXF provides two management commands that you can use for initialization:
 
@@ -30,11 +30,13 @@ PXF provides two management commands that you can use for initialization:
 
 PXF also provides similar `reset` commands that you can use to reset your PXF configuration.
 
+<div class="note">The procedures in this topic assume that you have added the <code>$PXF_HOME/bin</code> directory to your <code>$PATH</code>.</div>
+
 ## <a id="init_pxf"></a> Configuration Properties
 
 PXF supports both internal and user-customizable configuration properties.
 
-PXF internal configuration files are located in your Greenplum Database installation in the `$GPHOME/pxf/conf` directory.
+PXF internal configuration files are located in your PXF installation in the `$PXF_HOME/conf` directory.
 
 You identify the PXF user configuration directory at PXF initialization time via an environment variable named `$PXF_CONF`. If you do not set `$PXF_CONF` prior to initializing PXF, PXF may prompt you to accept or decline the default user configuration directory, `$HOME/pxf`, during the initialization process.
 
@@ -47,7 +49,11 @@ Refer to [PXF User Configuration Directories](about_pxf_dir.html#usercfg) for a 
 
 The PXF server runs on Java 8 or 11. You identify the PXF `$JAVA_HOME` and `$PXF_CONF` settings at PXF initialization time.
 
-Initializing PXF creates the PXF Java web application, and generates PXF internal configuration files, setting default properties specific to your configuration.
+Initializing PXF:
+
+- Copies PXF extension files from `$PXF_HOME/gpextable` to the Greenplum Database install directory when the `$GPHOME` environment variable is set.
+- Creates the PXF Java web application.
+- Generates PXF internal configuration files, setting default properties specific to your configuration.
 
 Initializing PXF also creates the `$PXF_CONF` user configuration directory if it does not already exist, and then populates `conf` and `templates` subdirectories with the following:
 
@@ -86,7 +92,7 @@ Perform the following procedure to initialize PXF on each segment host in your G
 4. Run the `pxf cluster init` command to initialize the PXF service on the master, standby master, and on each segment host. For example, the following command specifies `/usr/local/greenplum-pxf` as the PXF user configuration directory for initialization:
 
     ``` shell
-    gpadmin@gpmaster$ PXF_CONF=/usr/local/greenplum-pxf $GPHOME/pxf/bin/pxf cluster init
+    gpadmin@gpmaster$ PXF_CONF=/usr/local/greenplum-pxf pxf cluster init
     ```
 
     **Note**: The PXF service runs only on the segment hosts. However,`pxf cluster init` also sets up the PXF user configuration directories on the Greenplum Database master and standby master hosts.
@@ -96,13 +102,13 @@ Perform the following procedure to initialize PXF on each segment host in your G
 
 Should you need to, you can reset PXF to its uninitialized state. You might choose to reset PXF if you specified an incorrect `PXF_CONF` directory, or if you want to start the initialization procedure from scratch.
 
-When you reset PXF, PXF prompts you to confirm the operation. If you confirm, PXF removes the following runtime files and directories (where `PXF_HOME=$GPHOME/pxf`):
+When you reset PXF, PXF prompts you to confirm the operation. If you confirm, PXF removes the following runtime files and directories:
 
 - `$PXF_HOME/conf/pxf-private.classpath`
 - `$PXF_HOME/pxf-service`
 - `$PXF_HOME/run`
 
-PXF does not remove the `$PXF_CONF` directory during a reset operation.
+PXF does not remove the `$PXF_CONF` directory during a reset operation, nor does PXF remove any PXF extension files that may have been copied to your Greenplum Database installation.
 
 You must stop the PXF service instance on a segment host before you can reset PXF on the host.
 
@@ -116,16 +122,16 @@ Perform the following procedure to reset PXF on each segment host in your Greenp
     $ ssh gpadmin@<gpmaster>
     ```
 
-2. Stop the PXF service instances on each segment host. For example:
+2. Stop the PXF service instances on each segment host:
 
     ``` shell
-    gpadmin@gpmaster$ $GPHOME/pxf/bin/pxf cluster stop
+    gpadmin@gpmaster$ pxf cluster stop
     ```
 
-3. Reset the PXF service instances on all Greenplum hosts. For example:
+3. Reset the PXF service instances on all Greenplum hosts:
 
     ``` shell
-    gpadmin@gpmaster$ $GPHOME/pxf/bin/pxf cluster reset
+    gpadmin@gpmaster$ pxf cluster reset
     ```
 
 **Note**: After you reset PXF, you must initialize and start PXF to use the service again.
